
Version 5.04  2014-08-24
 * add fastdfs.spec for build RPM on Linux
 * depend on libfastcommon
 * in multi tracker servers case, when receive higher status like
   online / active and the storage status is wait_sync or syncing,
   the tracker adjust storage status to newer, and the storage rejoin
   to the tracker server

Version 5.03  2014-08-10
 * network send and recv retry when error EINTR happen
 * support mac OS Darwin
 * use newest logger from libfastcommon
 * patches by liangry@ucweb.com
 * bug fixed: can't sync large files cause by v5.02
 * use newest files from libfastcommon
 * change TRACKER_SYNC_STATUS_FILE_INTERVAL from 3600 to 300
 * socket send and recv ignore erno EINTR

Version 5.02  2014-07-20
 * corect README spell mistake
 * bug fixed: can't deal sync truncate file exception
 * remove tracker_global.c extern keyword to tracker_global.h
 * change log level from ERROR to DEBUG when IOEVENT_ERROR
 * php callback should use INIT_ZVAL to init zval variable
 * add function short2buff and buff2short
 * add get_url_content_ex to support buffer passed by caller
 * logger can set rotate time format
 * logger can log header line
 * #include <stdbool.h> to use C99 bool
 * logger can delete old rotated files
 * bug fixed: connection pool should NOT increase counter when connect fail
 * logger.c do NOT call fsync after write

Version 5.01  2014-02-02
 * trunk binlog be compressed when trunk init
 * bug fixed: sync trunk binlog file to other storage servers immediately when
   the trunk server init done
 * move ioevent_loop.[hc] and fast_task_queue.[hc] from tracker/ to common/
 * hash table support locks
 * hash talbe support new functions: hash_inc and hash_inc_ex

Version 5.00  2013-12-23
 * discard libevent, use epoll in Linux, kqueue in FreeBSD, port in SunOS directly
 * do_notify_leader_changed force close connection when target is myself
 * modify the INSTALL file and tracker/Makefile.in

Version 4.08  2013-11-30