@@ -56,6 +56,8 @@
 #define TRACKER_PROTO_CMD_SERVICE_QUERY_FETCH_ALL		105
 #define TRACKER_PROTO_CMD_SERVICE_QUERY_STORE_WITHOUT_GROUP_ALL	106
 #define TRACKER_PROTO_CMD_SERVICE_QUERY_STORE_WITH_GROUP_ALL	107
+#define TRACKER_PROTO_CMD_SERVER_DELETE_GROUP			108
+
 #define TRACKER_PROTO_CMD_RESP					100
 #define FDFS_PROTO_CMD_ACTIVE_TEST				111  //active test, tracker and storage both support since V1.28
 
